# ITMO_CT_HWs

Android_homework/Android_1dz+9dz/: settings.gradle
Android_homework/Android_1dz+9dz/app/: build.gradle
Android_homework/Android_2dz/: settings.gradle
Android_homework/Android_2dz/app/: build.gradle
Android_homework/Android_3dz/: settings.gradle
Android_homework/Android_4dz/: settings.gradle
Android_homework/Android_5dz/: settings.gradle
Android_homework/Android_6dz/: build.gradle  settings.gradle
Cpp_ITMO/seam-carving-10Legend01/: CMakeLists.txt
DataAnalys_ITMO_5sem/: Lab_0.ipynb  Lab_1.ipynb  Lab_2.ipynb  New_Google_price.csv  README.md
DataAnalys_ITMO_5sem/Lab3/: Lab_3_ver1.ipynb  Lab_3_ver2.ipynb  Lab_3_ver3.ipynb
DataAnalys_ITMO_5sem/Lab4/: Lab 4.ipynb  Lab_4_ver1.ipynb  Lab_4_ver2.ipynb  Lab_4_ver3.ipynb
DataAnalys_ITMO_5sem/Lab5/: Lab_5.ipynb  main.ipynb
DataAnalys_ITMO_5sem/Lab6/: Lab_6.ipynb
DataAnalys_ITMO_5sem/examples/: 00-eda.ipynb  01-modelling.ipynb
ML_lab_6sem/: README.md
ML_lab_6sem/lab2/: lab2.ipynb  lab2_ver2.ipynb  model1.save
OS_lab/mod_lab2/: memory.sh  test.sh  whitebox.sh
coding_theory_7sem/: A.cpp  F.cpp  J.cpp
fp-git-homeworks/homework-1-10Legend01/hw1/: hw1.cabal
fp-git-homeworks/homework-1-10Legend01/hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
fp-git-homeworks/homework-2-10Legend01/hw2/: hw2.cabal
fp-git-homeworks/homework-2-10Legend01/hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
fp-git-homeworks/homework-3-10Legend01/hw3/: hw3.cabal
fp-git-homeworks/homework-3-10Legend01/hw3/app/: Main.hs
fp-git-homeworks/homework-3-10Legend01/hw3/src/HW3/: Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
fp-git-homeworks/homework-3-10Legend01/hw3/test/: Spec.hs
methods_of_translation/lab1/: 1.1.pl  1.10.pl  1.11.pl  1.2.pl  1.3.pl  1.4.pl  1.5.pl  1.6.pl  1.7.pl  1.8.pl  1.9.pl  2.1.pl  2.10.pl  2.2.pl  2.3.pl  2.4.pl  2.5.pl  2.6.pl  2.7.pl  2.8.pl  2.9.pl  3.1.pl  3.2.pl
methods_of_translation/lab2/: GraphViz.gv  README.md  main.py  work_oldver.md
methods_of_translation/lab3/: KeyPrinter.py  README.md  output.c  printer.py  test_input.txt
methods_of_translation/lab4/: GraphViz.gv  GraphViz.py  README.md  calc.py  calcFactorial.py  lab2.py  main.py
optimization_methods_4sem/: README.md
optimization_methods_4sem/lab1/: lab1.ipynb
optimization_methods_4sem/lab3/: Lab3.ipynb
(+223 files in other folders)
