name:                hw1
version:             0.1.0.0

author:              Nazarov Mikhail

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     HW1.T1, HW1.T2, HW1.T3, HW1.T4, HW1.T5, HW1.T6, HW1.T7
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
