name:                hw2
version:             0.1.0.0

author:              Nazarov Mikhail

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     HW2.T1, HW2.T2, HW2.T3, HW2.T4, HW2.T5, HW2.T6
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
