name:                hw3
version:             0.1.0.0

author:              Nazarov Mikhail

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     HW3.Base, HW3.Evaluator, HW3.Parser, HW3.Pretty
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , megaparsec
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , scientific
                     , parser-combinators
  default-language:    Haskell2010

executable hi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3
                     , haskeline
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw3
                     , hspec
                     , tasty-hspec
                     , tasty
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
